--- a/advance_lane_lines.ipynb
+++ b/advance_lane_lines.ipynb
@@ -125,7 +125,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def thresholded_binary_image()"
+    "def thresholded_binary_image(img, s_thresh=(170, 255), sx_thresh=(20, 100)):\n",
+    "\n",
+    "    hls = cv2.cvtColor(img, cv2.COLOR_BGR2HLS)    # Convert to HLS color space\n",
+    "    \n",
+    "    l_channel = hls[:,:,1]    # Separate l Channel\n",
+    "    s_channel = hls[:,:,2]    # Separate s Channel\n",
+    "    \n",
+    "    sobelx = cv2.Sobel(l_channel, cv2.CV_64F, 1, 0) # Take the derivative in x\n",
+    "    abs_sobelx = np.absolute(sobelx) # Absolute x derivative to accentuate lines away from horizontal\n",
+    "    scaled_sobel = np.uint8(255*abs_sobelx/np.max(abs_sobelx))\n",
+    "    \n",
+    "    # Threshold x gradient\n",
+    "    sxbinary = np.zeros_like(scaled_sobel)\n",
+    "    sxbinary[(scaled_sobel >= sx_thresh[0]) & (scaled_sobel <= sx_thresh[1])] = 1\n",
+    "    \n",
+    "    # Threshold color channel\n",
+    "    s_binary = np.zeros_like(s_channel)\n",
+    "    s_binary[(s_channel >= s_thresh[0]) & (s_channel <= s_thresh[1])] = 1\n",
+    "    # Stack each channel\n",
+    "    color_binary = np.dstack(( np.zeros_like(sxbinary), sxbinary, s_binary)) * 255\n",
+    "    \n",
+    "    # Combine the two binary thresholds\n",
+    "    combined_binary = np.zeros_like(sxbinary)\n",
+    "    combined_binary[(s_binary == 1) | (sxbinary == 1)] = 1\n",
+    "    \n",
+    "    return color_binary, combined_binary\n",
+    "\n",
+    "image = mpimg.imread('test_images/test5.jpg')\n",
+    "undistorted = cal_undistort(image, mtx, dist)\n",
+    "color_binary, combined_binary = thresholded_binary_image(undistorted)\n",
+    "\n",
+    "\n",
+    "# Plot the result\n",
+    "f, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(24, 9))\n",
+    "f.tight_layout()\n",
+    "\n",
+    "ax1.imshow(image)\n",
+    "ax1.set_title('Original Image', fontsize=20)\n",
+    "\n",
+    "ax2.imshow(color_binary)\n",
+    "ax2.set_title('Stacked thresholds', fontsize=20)\n",
+    "\n",
+    "ax3.imshow(combined_binary, cmap='gray')\n",
+    "ax3.set_title('Combined S channel and gradient thresholds', fontsize=20)\n",
+    "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
    ]
   }
  ],
@@ -145,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
