--- a/advance_lane_lines.ipynb
+++ b/advance_lane_lines.ipynb
@@ -40,8 +40,10 @@
     "    # Array to store object points and image points\n",
     "    objpoints = []    # 3D point of real world space\n",
     "    imgpoints = []    # 2D point of image \n",
-    "\n",
+    "    \n",
+    "    # prepare object points, like (0,0,0), (1,0,0), (2,0,0) ....,(6,5,0)\n",
     "    objp = np.zeros((6*9,3), np.float32)\n",
+    "    # The .T transposes the matrix, and the .reshape(-1,2) then reshapes it into a two-column array shape\n",
     "    objp[:,:2] = np.mgrid[0:9,0:6].T.reshape(-1,2) \n",
     "    \n",
     "    for image in images:\n",
@@ -52,11 +54,12 @@
     "        # Find the chessboard corner\n",
     "        ret, corners = cv2.findChessboardCorners(gray, (9,6), None)\n",
     "\n",
-    "        # If corner are found\n",
+    "        # If corner are found, add object points, image points\n",
     "        if ret == True:\n",
     "            imgpoints.append(corners)\n",
     "            objpoints.append(objp)\n",
     "\n",
+    "            # Draw and display the corners\n",
     "            img = cv2.drawChessboardCorners(img, (9,6), corners, ret)\n",
     "            plt.imshow(img)\n",
     "            \n",
@@ -66,7 +69,7 @@
     "\n",
     "mtx, dist = camera_calibration()\n",
     "print ('mtx: ', mtx)\n",
-    "print ('dist: ', dist)\n"
+    "print ('dist: ', dist)"
    ]
   },
   {
@@ -89,7 +92,7 @@
    ],
    "source": [
     "def cal_undistort(img, mtx, dist):\n",
-    "    \n",
+    "#     Undistort the image\n",
     "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
     "    \n",
     "    return undist\n",
@@ -116,13 +119,17 @@
    "source": [
     "def thresholded_binary_image(img, s_thresh=(170, 255), sx_thresh=(20, 100)):\n",
     "\n",
-    "    hls = cv2.cvtColor(img, cv2.COLOR_BGR2HLS)    # Convert to HLS color space\n",
+    "#     Convert to HLS color space\n",
+    "    hls = cv2.cvtColor(img, cv2.COLOR_BGR2HLS)\n",
     "    \n",
     "    l_channel = hls[:,:,1]    # Separate l Channel\n",
     "    s_channel = hls[:,:,2]    # Separate s Channel\n",
     "    \n",
-    "    sobelx = cv2.Sobel(l_channel, cv2.CV_64F, 1, 0) # Take the derivative in x\n",
-    "    abs_sobelx = np.absolute(sobelx) # Absolute x derivative to accentuate lines away from horizontal\n",
+    "#     Take the derivative in x\n",
+    "    sobelx = cv2.Sobel(l_channel, cv2.CV_64F, 1, 0)\n",
+    "#     Absolute x derivative to accentuate lines away from horizontal\n",
+    "    abs_sobelx = np.absolute(sobelx)\n",
+    "#     Convert the absolute value image to 8-bit:\n",
     "    scaled_sobel = np.uint8(255*abs_sobelx/np.max(abs_sobelx))\n",
     "    \n",
     "    # Threshold x gradient\n",
@@ -141,16 +148,15 @@
     "    \n",
     "    return color_binary, combined_binary\n",
     "\n",
-    "image = mpimg.imread('test_images/test5.jpg')\n",
-    "undistorted = cal_undistort(image, mtx, dist)\n",
+    "img = mpimg.imread('test_images/test5.jpg')\n",
+    "undistorted = cal_undistort(img, mtx, dist)\n",
     "color_binary, combined_binary = thresholded_binary_image(undistorted)\n",
-    "\n",
     "\n",
     "# Plot the result\n",
     "f, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(24, 9))\n",
     "f.tight_layout()\n",
     "\n",
-    "ax1.imshow(image)\n",
+    "ax1.imshow(img)\n",
     "ax1.set_title('Original Image', fontsize=20)\n",
     "\n",
     "ax2.imshow(color_binary)\n",
@@ -213,6 +219,166 @@
     "    \n",
     "plt.plot(histogram)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_lane_pixels(binary_warped, view):\n",
+    "    histogram = np.sum(binary_warped[binary_warped.shape[0]//2:,:], axis=0)\n",
+    "#     Create an output image to draw on and visualize the result\n",
+    "    out_img = np.dstack((binary_warped, binary_warped, binary_warped))\n",
+    "    \n",
+    "#     Find the peak of the left and right halves of the histogram\n",
+    "#     These will be the starting point for the left and right lines\n",
+    "    midpoint = np.int(histogram.shape[0]//2)\n",
+    "    leftx_base = np.argmax(histogram[:midpoint])\n",
+    "    rightx_base = np.argmax(histogram[midpoint:]) + midpoint\n",
+    "       \n",
+    "#     Hyperparameters\n",
+    "    nwindows = 9   # number of windows\n",
+    "    margin = 100   # set the width of window +/- margin\n",
+    "    minpix = 50    # minimum number of pixels in window\n",
+    "    \n",
+    "    #     Set height of windows - based on nwindows above and image shape\n",
+    "    window_height = np.int(binary_warped.shape[0]//nwindows)\n",
+    "    \n",
+    "#     Identify the x and y position of all the nonzero pixels\n",
+    "    nonzero = binary_warped.nonzero()\n",
+    "    nonzerox = np.array(nonzero[1])\n",
+    "    nonzeroy = np.array(nonzero[0])\n",
+    "    \n",
+    "#     current position of each window in nwindows\n",
+    "    leftx_current = leftx_base\n",
+    "    rightx_current = rightx_base\n",
+    "    \n",
+    "#     Create empty lists to receive left and right lane pixel indices\n",
+    "    left_lane_inds = []\n",
+    "    right_lane_inds = []\n",
+    "    \n",
+    "#     Step through the windows one by one\n",
+    "    for window in range(nwindows):\n",
+    "        # Identify window boundaries in x and y (and right and left)\n",
+    "        win_y_low = binary_warped.shape[0] - (window+1)*window_height\n",
+    "        win_y_high = binary_warped.shape[0] - window*window_height\n",
+    "        # Find the four below boundaries of the window \n",
+    "        win_xleft_low = leftx_current - margin  # Update this\n",
+    "        win_xleft_high = leftx_current + margin  # Update this\n",
+    "        win_xright_low = rightx_current - margin  # Update this\n",
+    "        win_xright_high = rightx_current + margin  # Update this\n",
+    "        \n",
+    "        # Draw the windows on the visualization image\n",
+    "        cv2.rectangle(out_img,(win_xleft_low,win_y_low),\n",
+    "        (win_xleft_high,win_y_high),(0,255,0), 2) \n",
+    "        cv2.rectangle(out_img,(win_xright_low,win_y_low),\n",
+    "        (win_xright_high,win_y_high),(0,255,0), 2) \n",
+    "        \n",
+    "        #Identify the nonzero pixels in x and y within the window\n",
+    "        good_left_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
+    "        (nonzerox >= win_xleft_low) &  (nonzerox < win_xleft_high)).nonzero()[0]\n",
+    "        good_right_inds = ((nonzeroy >= win_y_low) & (nonzeroy < win_y_high) & \n",
+    "        (nonzerox >= win_xright_low) &  (nonzerox < win_xright_high)).nonzero()[0]\n",
+    "        \n",
+    "        # Append these indices to the lists\n",
+    "        left_lane_inds.append(good_left_inds)\n",
+    "        right_lane_inds.append(good_right_inds)\n",
+    "        \n",
+    "        # If > minpix found  pixels, recenter next window\n",
+    "        if len(good_left_inds) > minpix:\n",
+    "            leftx_current = np.int(np.mean(nonzerox[good_left_inds]))\n",
+    "        if len(good_right_inds) > minpix:\n",
+    "            rightx_current = np.int(np.mean(nonzerox[good_right_inds]))\n",
+    "        \n",
+    "    # Concatenate the arrays of indices (previously was a list of lists of pixels)\n",
+    "    try:\n",
+    "        left_lane_inds = np.concatenate(left_lane_inds)\n",
+    "        right_lane_inds = np.concatenate(right_lane_inds)\n",
+    "    except ValueError:\n",
+    "        # Avoids an error if the above is not implemented fully\n",
+    "        pass\n",
+    "\n",
+    "    # Extract left and right line pixel positions\n",
+    "    leftx = nonzerox[left_lane_inds]\n",
+    "    lefty = nonzeroy[left_lane_inds] \n",
+    "    rightx = nonzerox[right_lane_inds]\n",
+    "    righty = nonzeroy[right_lane_inds]\n",
+    "\n",
+    "\n",
+    "    #Fit a second order polynomial to each using `np.polyfit`\n",
+    "    left_fit = np.polyfit(lefty, leftx, 2)\n",
+    "    right_fit = np.polyfit(righty, rightx, 2)\n",
+    "\n",
+    "    # Generate x and y values for plotting\n",
+    "    ploty = np.linspace(0, binary_warped.shape[0]-1, binary_warped.shape[0] )\n",
+    "    try:\n",
+    "        left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "        right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "    except TypeError:\n",
+    "        # Avoids an error if `left` and `right_fit` are still none or incorrect\n",
+    "        print('The function failed to fit a line!')\n",
+    "        left_fitx = 1*ploty**2 + 1*ploty\n",
+    "        right_fitx = 1*ploty**2 + 1*ploty\n",
+    "\n",
+    "    ## Visualization ##\n",
+    "    # Colors in the left and right lane regions\n",
+    "    out_img[lefty, leftx] = [255, 0, 0]\n",
+    "    out_img[righty, rightx] = [0, 0, 255]\n",
+    "    \n",
+    "#     View your output\n",
+    "    if (view == True):\n",
+    "        f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "        f.tight_layout()\n",
+    "        ax1.set_title('Sliding Window', fontsize=50)\n",
+    "        ax1.imshow(out_img)\n",
+    "        ax1.plot(left_fitx, ploty, color='yellow')\n",
+    "        ax1.plot(right_fitx, ploty, color='yellow')\n",
+    "    \n",
+    "    ## Visualization ##\n",
+    "    # Create an image to draw on and an image to show the selection window\n",
+    "    out_img = np.dstack((binary_warped, binary_warped, binary_warped))*255\n",
+    "    window_img = np.zeros_like(out_img)\n",
+    "    # Color in left and right line pixels\n",
+    "    out_img[nonzeroy[left_lane_inds], nonzerox[left_lane_inds]] = [255, 0, 0]\n",
+    "    out_img[nonzeroy[right_lane_inds], nonzerox[right_lane_inds]] = [0, 0, 255]\n",
+    "\n",
+    "    # Generate a polygon to illustrate the search window area\n",
+    "    # And recast the x and y points into usable format for cv2.fillPoly()\n",
+    "    left_line_window1 = np.array([np.transpose(np.vstack([left_fitx-margin, ploty]))])\n",
+    "    left_line_window2 = np.array([np.flipud(np.transpose(np.vstack([left_fitx+margin, \n",
+    "                              ploty])))])\n",
+    "    left_line_pts = np.hstack((left_line_window1, left_line_window2))\n",
+    "    right_line_window1 = np.array([np.transpose(np.vstack([right_fitx-margin, ploty]))])\n",
+    "    right_line_window2 = np.array([np.flipud(np.transpose(np.vstack([right_fitx+margin, \n",
+    "                              ploty])))])\n",
+    "    right_line_pts = np.hstack((right_line_window1, right_line_window2))\n",
+    "\n",
+    "    # Draw the lane onto the warped blank image\n",
+    "    cv2.fillPoly(window_img, np.int_([left_line_pts]), (0,255, 0))\n",
+    "    cv2.fillPoly(window_img, np.int_([right_line_pts]), (0,255, 0))\n",
+    "    result = cv2.addWeighted(out_img, 1, window_img, 0.3, 0)\n",
+    "    \n",
+    "#   View your output\n",
+    "    if (view == True):\n",
+    "        ax2.set_title('Search from prior', fontsize=50)\n",
+    "        ax2.imshow(result)\n",
+    "        ax2.plot(right_fitx, ploty, color='yellow')\n",
+    "        ax2.plot(left_fitx, ploty, color='yellow')\n",
+    "    \n",
+    "    return result, out_img, ploty, left_fit, right_fit, left_fitx, right_fitx\n",
+    "\n",
+    "# Run image through the pipeline\n",
+    "# Note that in your project, you'll also want to feed in the previous fits\n",
+    "result, out_img, ploty, left_fit, right_fit, left_fitx, right_fitx = find_lane_pixels(binary_warped, True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
