Measure curve radius

--- a/advance_lane_lines.ipynb
+++ b/advance_lane_lines.ipynb
@@ -378,7 +378,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def measure_curvature_real(left_fit, right_fit, left_fitx, right_fitx, ploty):\n",
+    "    \n",
+    "#     Define conversions in x and y from pixels space to meters\n",
+    "    ym_per_pix = 30/720 # meters per pixel in y dimension\n",
+    "    xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
+    "    \n",
+    "    leftx = left_fitx[::-1]  # Reverse to match top-to-bottom in y\n",
+    "    rightx = right_fitx[::-1]  # Reverse to match top-to-bottom in y\n",
+    "\n",
+    "    # Fit a second order polynomial to pixel positions in each fake lane line\n",
+    "    # Fit new polynomials to x,y in world space\n",
+    "    left_fit_cr = np.polyfit(ploty*ym_per_pix, leftx*xm_per_pix, 2)\n",
+    "    right_fit_cr = np.polyfit(ploty*ym_per_pix, rightx*xm_per_pix, 2)\n",
+    "    \n",
+    "    # Define y-value where we want radius of curvature\n",
+    "    # We'll choose the maximum y-value, corresponding to the bottom of the image\n",
+    "    y_eval = np.max(ploty)\n",
+    "    \n",
+    "    # Calculation of R_curve (radius of curvature)\n",
+    "    left_curve_radius = ((1 + (2*left_fit_cr[0]*y_eval*ym_per_pix + left_fit_cr[1])**2)**1.5) / np.absolute(2*left_fit_cr[0])\n",
+    "    right_curve_radius = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
+    "    \n",
+    "    leftx_lane = left_fit[0]*(img.shape[0]-1)**2 + left_fit[1]*(img.shape[0]-1) + left_fit[2]\n",
+    "    rightx_lane = right_fit[0]*(img.shape[0]-1)**2 + right_fit[1]*(img.shape[0]-1) + right_fit[2]\n",
+    "    \n",
+    "    car_position = ((img.shape[1]/2)-((leftx_lane+rightx_lane)/2))*xm_per_pix\n",
+    "    \n",
+    "    return left_curve_radius, right_curve_radius, car_position\n",
+    "\n",
+    "\n",
+    "# Calculate the radius of curvature in meters for both lane lines\n",
+    "left_curve_radius, right_curve_radius, car_position = measure_curvature_real(left_fit, right_fit, left_fitx, right_fitx, ploty)\n",
+    "\n",
+    "print(left_curve_radius, 'm', right_curve_radius, 'm')\n",
+    "print ('Position: ', car_position)"
+   ]
   }
  ],
  "metadata": {
