Show final display and add video pipeline

--- a/advance_lane_lines.ipynb
+++ b/advance_lane_lines.ipynb
@@ -415,6 +415,89 @@
     "print(left_curve_radius, 'm', right_curve_radius, 'm')\n",
     "print ('Position: ', car_position)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def final_display(ploty, left_fitx, right_fitx, binary_warped, undistorted, left_curve_radius, right_curve_radius, car_position):\n",
+    "    # Create an image to draw the lines on\n",
+    "    warp_zero = np.zeros_like(binary_warped).astype(np.uint8)\n",
+    "    color_warp = np.dstack((warp_zero, warp_zero, warp_zero))\n",
+    "\n",
+    "    # Recast the x and y points into usable format for cv2.fillPoly()\n",
+    "    pts_left = np.array([np.transpose(np.vstack([left_fitx, ploty]))])\n",
+    "    pts_right = np.array([np.flipud(np.transpose(np.vstack([right_fitx, ploty])))])\n",
+    "    pts = np.hstack((pts_left, pts_right))\n",
+    "     \n",
+    "    # Draw the lane onto the warped blank image\n",
+    "    cv2.fillPoly(color_warp, np.int_([pts]), (0,255, 0))\n",
+    "\n",
+    "    # Warp the blank back to original image space using inverse perspective matrix (Minv)\n",
+    "    newwarp = cv2.warpPerspective(color_warp, Minv, (img.shape[1], img.shape[0])) \n",
+    "    # Combine the result with the original image\n",
+    "    final = cv2.addWeighted(undistorted, 1, newwarp, 0.3, 0)\n",
+    "    \n",
+    "#     Write text on image\n",
+    "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "    text = \"Left curve radius: {:.2f} m\".format(left_curve_radius)\n",
+    "    cv2.putText(final, text, (50,50), font, 1, (255,255,255), 2)\n",
+    "    text = \"Right curve radius: {:.2f} m\".format(right_curve_radius)\n",
+    "    cv2.putText(final, text, (50,100), font, 1, (255,255,255), 2)\n",
+    "    text = \"Vehicle is {:.2f} m Right from center\".format(car_position)\n",
+    "    cv2.putText(final, text, (50,150), font, 1, (255,255,255), 2)\n",
+    "\n",
+    "    \n",
+    "    return final \n",
+    "final = final_display(ploty, left_fitx, right_fitx, binary_warped, undistorted, left_curve_radius, right_curve_radius, car_position)\n",
+    "plt.imshow(final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from moviepy.editor import VideoFileClip\n",
+    "from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_image(img):\n",
+    "    #video pipeline\n",
+    "    \n",
+    "    # Undistort Image\n",
+    "    undistorted = cal_undistort(img, mtx, dist)\n",
+    "\n",
+    "    # Generate binary image\n",
+    "    color_binary, combined_binary = thresholded_binary_image(undistorted)\n",
+    "    \n",
+    "    # Calculate perspective transform\n",
+    "    M, Minv, binary_warped = perspective_transform(combined_binary)\n",
+    "    \n",
+    "    # find lane pixels\n",
+    "    result, out_img, ploty, left_fit, right_fit, left_fitx, right_fitx = find_lane_pixels(binary_warped, False)\n",
+    "\n",
+    "    # Calculate Curve radius\n",
+    "    left_curve_radius, right_curve_radius, car_position = measure_curvature_real(left_fit, right_fit, left_fitx, right_fitx, ploty)\n",
+    "\n",
+    "    # Display final image\n",
+    "    final = final_display(ploty, left_fitx, right_fitx, binary_warped, undistorted, left_curve_radius, right_curve_radius, car_position)\n",
+    "    return final\n",
+    "\n",
+    "project_video_output = ('project_video_output.mp4')\n",
+    "clip1 = VideoFileClip(\"project_video.mp4\")\n",
+    "white_clip = clip1.fl_image(process_image)\n",
+    "%time white_clip.write_videofile(project_video_output, audio=False)"
+   ]
   }
  ],
  "metadata": {
